# base_project_gtest

./: CMakeLists.txt  README.md
modules/cred_storage/: CMakeLists.txt
modules/cred_storage/test/: cred_storage_test.cpp  fs_mock.c
